# reuters-analysis

./: Cargo.toml  Inteligentna analiza danych (1).docx  build-app.sh  docs.md  pom.xml
classifier/: .gitignore  Cargo.toml  pom.xml
classifier/src/: main.rs
classifier/src/article/: element_type.rs
classifier/src/utils/: sgm_helper.rs
docker/: docker-compose.yml
executor/: pom.xml
executor/src/main/resources/: application.yml
frontend/: package-lock.json  package.json  pom.xml
frontend/src/: styles.css
frontend/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.ts  app.module.ts
frontend/src/app/execution/: classification-parameters.ts  execution.module.ts
frontend/src/app/execution/execute-classification/: execute-classification.component.css  execute-classification.component.html  execute-classification.component.ts
frontend/src/app/navigation/: navigation.component.css  navigation.component.html  navigation.component.ts
frontend/src/app/shared/: navigation.service.ts  result.service.ts  result.ts  shared.module.ts  visualization.service.ts
frontend/src/app/shared/accuracy-icon/: accuracy-icon.component.css  accuracy-icon.component.html  accuracy-icon.component.ts
frontend/src/app/shared/arrow-icon/: arrow-icon.component.css  arrow-icon.component.html  arrow-icon.component.ts
frontend/src/app/shared/chart-icon/: chart-icon.component.css  (+2 more)
frontend/src/app/statistics/: statistics.module.ts
src/: main.rs
src/article/: article.rs  mod.rs  text_traits.rs
src/utils/: cleaner.rs  mod.rs
(+76 files in other folders)
